spelling and citations

--- a/conclusions_and_summary.tex
+++ b/conclusions_and_summary.tex
@@ -13,10 +13,10 @@ of 4 \TeV.
 
 \par At one of the four points on the LHC ring where the proton beams
 are squeezed together to produce collisions, sits the Compact Muon
-Solenoid (CMS) experiement, a general purpose particle detector
+Solenoid (CMS) experiment, a general purpose particle detector
 designed to elucidate the mechanism of electroweak symmetry breaking,
 and explore physics interactions at the \TeV energy scale.  This
-14,000 ton, 15 m tall devicem, provides hermetic, 4$\pi$, coverage of
+14,000 ton, 15 m tall device, provides hermetic, 4$\pi$, coverage of
 the interaction region, and is composed of a system of sub-detectors,
 with a cylindrical symmetry about the beam-line and interaction
 region, which work in parallel to identify and measure the kinematic
@@ -28,13 +28,13 @@ trajectory of charged particles.  An electromagnetic calorimeter
 75,000 lead-tungstate crystals, which absorb energy from
 electromagnetically interacting particles, with electrons and photons
 depositing almost all of their energy in this sub-detector.  The
-hadronic calorimeter (HCAL) surrounds the ECAL, abosorbing the enregy
+hadronic calorimeter (HCAL) surrounds the ECAL, absorbing the energy
 of charged and neutral hadrons with stacks of brass absorber material
-with layers of plastic scintiallator to sample the energy in between.
+with layers of plastic scintillator to sample the energy in between.
 The outermost system are the muon chambers, which utilize three
 different types of detector technologies to provide fast timing to
-trigger measurments and excellent spatial resolution on muons, an
-important signature for many \TeV energy scale processes.  Hadrware
+trigger measurements and excellent spatial resolution on muons, an
+important signature for many \TeV energy scale processes.  Hardware
 and firmware installed on the detector provide an instant, but basic
 reconstruction of a collision, allowing for the amount of collisions
 recorded to be reduced from a rate of 40 MHz down to 10 kHz.  Events
@@ -59,19 +59,19 @@ produced an observed (expected) upper limit on the \ttH process as 5.8
 (5.2) times the Standard Model rate and published in the Journal of
 High Energy Physics (JHEP) in May of 2013.  
 
-\par A second analyis was performed on the full 19.5 \fbinv dataset of
+\par A second analysis was performed on the full 19.5 \fbinv dataset of
 8 \TeV data collected by CMS.  This also used a final state with a
 single lepton, at least 4 jets, and at least 2 $b$-tags, and a search
-region divided into cateogries based on the jet and $b$-tag
-multiplicity of the final state.  A different mulitvariate analysis
+region divided into categories based on the jet and $b$-tag
+multiplicity of the final state.  A different multivariate analysis
 (MVA) technique was employed: a Boosted Decision Tree (BDT) was
 trained to separate the \ttH signal from the \ttjets background for
-each of the jet/tag cateogrizations.  Once again, no significant
+each of the jet/tag categorizations.  Once again, no significant
 excess of events is observed, and an observed (expected) upper limit
 on the \ttH production rate is set at 4.9 (4.7) times the Standard
 Model prediction.  This analysis was combined with same and opposite
 sign di-lepton, mutli-lepton, and hadronic tau final states to produce
-an observed (expected) upper limit of 4.5 (2.5) time the prediced rate
+an observed (expected) upper limit of 4.5 (2.5) time the predicted rate
 of \ttH production.  
 
 \par In preparation to perform this search in the next dataset
@@ -79,12 +79,12 @@ collected by CMS, several investigations have been performed on ways
 to improve the sensitivity of the analysis to the \ttH signal.  One of
 the most important improvements will be the incorporation of
 next-to-leading order (NLO) QCD effects into the simulation of \ttH
-signal and \ttjets background.  This will imporve the modeling of high
-jet-multipicity events, which characterize both the singal and
+signal and \ttjets background.  This will improve the modeling of high
+jet-multiplicity events, which characterize both the signal and
 background in this analysis.  These improved simulations will also
 incorporate the latest techniques to calculate the spin-correlations
 of the decay products from heavy resonances in top-quark and $W$ boson
-decays, via the MadSpin framework.  This will allow the anglular
+decays, via the MadSpin framework.  This will allow the angular
 correlations of the daughters of the \ttbar system to be used to
 correctly associate jets in an event to their roles in the \ttbar
 decay, thereby reducing the combinatorics of jets that can possibly be
@@ -94,7 +94,7 @@ associated with jets from the Higgs decay.
 already underway, the observation of a \ttH signal will be
 increasingly likely in the larger statistics, higher-energy datasets
 collected in the future by \ttH.  In the lack of an observation, now
-or in the future, these upper limits can be used to constain future
+or in the future, these upper limits can be used to constrain future
 models involving physics beyond the Standard Model (BSM) that would
 predict enhancements to final states explored in these first two \ttH
 analyses.  
