spelling and citations

--- a/analysis_8TeV_5p1fb.tex
+++ b/analysis_8TeV_5p1fb.tex
@@ -1105,7 +1105,7 @@ $n$-dimensional space onto a one-dimensional space.
    \includegraphics[width=0.45\textwidth]{Figures/Analysis_1_Diagrams/ANN_simple.png}
    \caption{A simple example of a MLP type ANN, with one layer of
      input neurons that make connections to a hidden layer, which is
-     connected to the output layer}
+     connected to the output layer \cite{ANN_basic_image}}
    \label{fig:mlp_simple}
  \end{center}
 \end{figure}
